--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark top_menu">
       <div class="container mobile_header">
-        <a class="logo navbar-brand" href="https://obligedmeditatedazed.com/f96ygtg8ci?key=5bdd072cc7528a55ee85169fe1dfbac7"><b>HD VIDEO</B></a>
+        <a class="logo navbar-brand" href="https://obligedmeditatedazed.com/f96ygtg8ci?key=5bdd072cc7528a55ee85169fe1dfbac7" target="_blank"><b>HD VIDEO</B></a>
         <ul class="nav justify-content-end">
           <li class="dropdown">
               <a href="#" class="signin_btn"  role="button" aria-expanded="true"><i class="fa fa-user"></i> Login | </span></a>
-              <a class="affiliate" href="https://obligedmeditatedazed.com/f96ygtg8ci?key=5bdd072cc7528a55ee85169fe1dfbac7">Register</a>
+              <a class="affiliate" href="https://obligedmeditatedazed.com/f96ygtg8ci?key=5bdd072cc7528a55ee85169fe1dfbac7" target="_blank">Register</a>
           </li>
         </ul>
       </div>
@@ -114,7 +114,7 @@
 	  <br />
 	  
 	  <div class="text-center">
-		<a class="btn btn-outline affiliate" href="https://obligedmeditatedazed.com/f96ygtg8ci?key=5bdd072cc7528a55ee85169fe1dfbac7">Watch Now</a>  <a class="btn btn-outline affiliate" href="https://obligedmeditatedazed.com/f96ygtg8ci?key=5bdd072cc7528a55ee85169fe1dfbac7">DOWNLOAD FREE</a>
+		<a class="btn btn-outline affiliate" href="https://obligedmeditatedazed.com/f96ygtg8ci?key=5bdd072cc7528a55ee85169fe1dfbac7" target="_blank">Watch Now</a>  <a class="btn btn-outline affiliate" href="https://obligedmeditatedazed.com/f96ygtg8ci?key=5bdd072cc7528a55ee85169fe1dfbac7" target="_blank">DOWNLOAD FREE</a>
 	  </div>
 </br>	   
 
